k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: imaginary-rs
  labels:
    name: imaginary-rs
    app.kubernetes.io/name: imaginary-rs
    app.kubernetes.io/component: image-processing
